--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="title_activity_options">OptionsActivity</string>
     <string name="title_activity_call_status">CallStatusActivity</string>
     <string name="title_activity_call_log">CallLogActivity</string>
+    <string name="title_activity_sms">SMSActivity</string>
+    <string name="title_activity_ring_out">RingOutActivity</string>
 </resources>
